# speech-recognition-and-response

./: CMakeLists.txt  Makefile  README.md  command  main
examples/: CMakeLists.txt
examples/command/: CMakeLists.txt
examples/main/: main.cpp
examples/talk/: CMakeLists.txt  speak  talk.cpp  talk_bak.cpp
